--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Agora Café - Premium coffee and community in the heart of Groningen, Netherlands. Experience exceptional coffee, fresh pastries, and a welcoming atmosphere." />
+    <meta name="description" content="Agora Café - Coffee and community in the heart of Groningen, Netherlands." />
     <meta name="keywords" content="café, coffee, Groningen, Netherlands, specialty coffee, pastries, community" />
-    <meta property="og:title" content="Agora Café - Where Coffee Meets Community" />
+    <meta property="og:title" content="Agora Café" />
     <meta property="og:description" content="Located in the heart of Groningen, our café serves exceptional coffee in a warm, welcoming atmosphere." />
     <meta property="og:type" content="website" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
